Fixed gap and centering for task and add button

--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,8 @@ input {border: none;}
 li {list-style: none;}
 
 img {
-    height: 20px;
-    width: 20px;
+    height: 15px;
+    width: 15px;
 }
 
 .main-container {
@@ -57,15 +57,18 @@ img {
     gap: 5px;
 }
 
-.add-btn-container {opacity: 60%;}
+.add-btn-container {
+    opacity: 60%;
+    margin: 15px 15px;
+}
 
 .add-btn-container:hover {opacity: 100%;}
 
 .add {
     display: flex;
     gap: 10px;
-    margin: 15px 10px;
     cursor: pointer;
+    align-items: center;
 }
 
 .dropbtn {
